# MotorContableTSC

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
src/: __init__.py
src/motor_contable_tsc/: __init__.py  cartola.py  cli.py  comprobantes.py  exportador_nubox.py  models.py  normalizador.py  pipeline.py  reporte.py
tests/: test_agrupacion.py  test_comprobantes.py  test_exportador_nubox.py  test_normalizador.py
